<resources>
    <string name="app_name">HPSRDH</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_sign_in">SignIn</string>
    <string name="title_activity_log_out">LogOut</string>

    <!--Sign In-->
    <string name="login_start">Login to Your Account</string>

    <string name="logn_prompt">Please Enter Your Username and Password</string>
    <string name="logn_prompt_logout">You are already logged in. You need to first logout and then login again to access your account.</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="title_activity_user_list">UserList</string>
    <string name="title_activity_user_details_search">UserDetailsSearch</string>
    <string name="title_activity_uid__search__list">UID_Search_List</string>
    <string name="title_activity_eid__search__list">EID_Search_List</string>
</resources>
